---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: [u8; 5], result: pub [u8; 32]) {
    let mut digest: [u8; 32] = std::hash::blake3(x);
    digest[0] = 5 as u8;
    digest = std::hash::blake3(x);
    assert(digest == result);
}
